# libpq

./: .bazelrc  BUILD  BUILD.postgresql.bazel  LICENSE  MODULE.bazel  README.md  getpeereid.linux.c  pg_config.h  pg_config.linux.h  pg_config.macos.h  pg_config_ext.h  pg_config_os.h  pg_config_paths.h
.github/workflows/: build.yml
examples/c/: BUILD  main.c
